# internal/server/server.go
@@ -5,14 +5,17 @@ import (
 
 	"github.com/gogf/gf/v2/net/ghttp"
 	foundationauth "github.com/yueli-official/foundation/go/auth"
+	goframeauth "github.com/yueli-official/foundation/go/goframe/auth"
 	"github.com/yueli-official/paste/internal/httpapi"
 	pasteruntime "github.com/yueli-official/paste/internal/runtime"
 )
 
 type Dependencies struct {
-	Controller *httpapi.Core
-	Verifier   *foundationauth.Verifier
-	Database   *sql.DB
+	Controller       *httpapi.Core
+	Verifier         *foundationauth.Verifier
+	PersonalVerifier *foundationauth.PersonalTokenVerifier
+	PersonalSite     string
+	Database         *sql.DB
 }
 
 func Configure(server *ghttp.Server, dependencies Dependencies) {
@@ -27,26 +30,31 @@ func Configure(server *ghttp.Server, dependencies Dependencies) {
 	if dependencies.Controller == nil {
 		return
 	}
+	var verifier goframeauth.TokenVerifier
+	if dependencies.Verifier != nil {
+		verifier = foundationauth.CompositeVerifier{JWT: dependencies.Verifier, Personal: dependencies.PersonalVerifier}
+	}
 	server.Group("/", func(group *ghttp.RouterGroup) {
 		middlewares := []ghttp.HandlerFunc{apiMiddleware}
-		if dependencies.Verifier != nil {
-			middlewares = append(middlewares, pasteruntime.OptionalAuth(dependencies.Verifier))
+		if verifier != nil {
+			middlewares = append(middlewares, pasteruntime.OptionalAuth(verifier), httpapi.PersonalTokenRoutes)
 		}
 		group.Middleware(middlewares...)
 		group.Bind(dependencies.Controller.Public())
 	})
 	server.Group("/", func(group *ghttp.RouterGroup) {
 		middlewares := []ghttp.HandlerFunc{apiMiddleware}
-		if dependencies.Verifier != nil {
-			middlewares = append(middlewares, pasteruntime.RequiredAuth(dependencies.Verifier))
+		if verifier != nil {
+			middlewares = append(middlewares, pasteruntime.RequiredAuth(verifier), httpapi.PersonalTokenRoutes)
 		}
 		group.Middleware(middlewares...)
 		group.Bind(dependencies.Controller.Managed())
+		group.Bind(dependencies.Controller.PersonalPermissions(dependencies.PersonalSite))
 	})
 	server.Group("/", func(group *ghttp.RouterGroup) {
 		middlewares := []ghttp.HandlerFunc{apiMiddleware}
-		if dependencies.Verifier != nil {
-			middlewares = append(middlewares, pasteruntime.RequiredAuth(dependencies.Verifier))
+		if verifier != nil {
+			middlewares = append(middlewares, pasteruntime.RequiredAuth(verifier), httpapi.PersonalTokenRoutes)
 		}
 		group.Middleware(middlewares...)
 		group.Bind(dependencies.Controller.Administrator())
